# fastapi-demo

./: .gitignore  LICENSE  README.md  extract.py  main.py  models.py  pyproject.toml  test.py
data/: SDGCountry-Series.csv  SDGSeries-Time.csv  SDGSeries.csv
